# nuSTORM

./: .gitignore  requirements.txt
01-Code/: NeutrinoEventInstance.py  PionEventInstance.py  nuSTORMring.py
01-nuSIM/: analyse.root  runNumber  setEnv.bash
01-nuSIM/01-Code/: KDEdataFromFluka.py  NeutrinoEventInstance.py  PionEventInstance.py  RandomGenerator.py  analyse.py  eventHistory.py  genPion.py  nuSTORMTrfLineCmplx.py  particle.py  plane.py  readFluka.py
01-nuSIM/02-Tests/: NeutrinoEventInstanceTst.py  PionEventInstanceTst.py  controlTst.py  genPionTst.py  nuSTORMTrfLineCmplxTst.py  readFlukaTst.py
01-nuSIM/02-Tests/referenceOutput/: PSPiFlash.dict  piFlash40-304.dict
01-nuSIM/04-Studies/: MuRingDcy.dict  RunCmpltSimulation.py  RunNuSIM.py  analyse.py  analyseTst.py  control.py  eventRate.py  mkNuSpectra.py  normalisation.py  phaseSpaceStudy.py
01-nuSIM/11-Parameters/: nuSTORM-PrdStrght-Params-v1.0.csv  nuSTORM-TrfLineCmplx-Params-v1.0.csv
01-nuSIM/12-examples/: analyseHistory.py  checkEventGeneration.py  checkStation.py  histoManager.py  historyChecks.py  histsCreate.py  pSCorr.py  rootToDf.py  runRecord.py
01-nuSIM/31-Target/: README.md  singleTargetBin.py  singleTargetBin2.py  target.root
01-nuSIM/31-Target/v1/: README.md  target10.root  target132.root  target140.root  target15.root  target160.root  target170.root  target175.root  target180.root  target190.root  target195.root  target20.root  target210.root  target230.root  target240.root  target25.root  target250.root  target260.root  target263.root  target280.root  target30.root  target315.root  target320.root  target330.root  target340.root  target35.root  target350.root  target355.root  target360.root  target375.root  target390.root  target395.root  target40.root  target410.root  target420.root  target435.root  target440.root  target45.root  target450.root  target460.root  (+28 more)
01-nuSIM/31-Target/v2/: selected_pions_1.32GeV_2.0mm.txt  selected_pions_1GeV_2.0mm.txt  target50.root
01-nuSIM/41-BDSIM/: Complete_Line.gmad  Complete_Line2p64.gmad  Extraction_2p64.py  Extraction_5.py  Extraction_7p2.py
01-nuSIM/51-FFA/: bdsimcomparison.ipynb  ffaOptimisation.ipynb
02-Tests/: MuonDecayTst.py  NeutrinoEventInstanceTst.py  PionEventInstanceTst.py  nuSTORMTrfLineTst.py
02-nuAnalysis/02-CppAnal/: Dockerfile  README.md  run_tests_in_docker.sh
02-nuAnalysis/02-CppAnal/01-Code/: nuAnalysis.cpp  nuAnalysis.hpp
02-nuAnalysis/02-CppAnalysis/: .dockerignore  Dockerfile  README.md  build_run_docker.sh  run_tests_in_docker.sh
02-nuAnalysis/02-CppAnalysis/src/: CMakeLists.txt  CMakePresets.json
02-nuAnalysis/02-CppAnalysis/src/analysis/: CMakeLists.txt
02-nuAnalysis/02-CppAnalysis/src/analysis/apps/: CMakeLists.txt  nuAnalysis-skeleton.cc
02-nuAnalysis/02-CppAnalysis/src/analysis/include/: nu_analysis.h  run_control.h
02-nuAnalysis/02-CppAnalysis/src/analysis/src/: nu_analysis.cc  run_control.cc
02-nuAnalysis/02-CppAnalysis/src/analysis/tests/: CMakeLists.txt
21-Detector/step_final_SD/0804/: CMakeCache.txt  G4History.macro  Makefile  cmake_install.cmake  triangles
21-Detector/step_final_SD/source/src/: trianglesScintHit.cc
